# autotools-template

./: .travis.yml  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  autotools-template.c  autotools-template.h  autotools-template.pc.in  autotools_template.h  autotools_template.pc.in  main.cc
tests/: Makefile.am  autotools-template-tests.cpp  autotools_template_tests.cpp
